# InspriTrip

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/demo/: README.md  alias_map.csv  destination_facts.jsonl  destination_profiles.jsonl  entities.jsonl  travel_matrix.jsonl  travel_route_overrides.json  ugc_claims.jsonl
database/: 001_recommendation_v2.sql
docs/: architecture.md  case-study.md  data-and-evaluation.md  experimentation.md  limitations.md
schemas/: destination_map_enrichment_schema.json  destination_map_override_schema.json  destination_profile_schema.json  entity_schema.json  intent_taxonomy.json  note_extraction_schema.json  poi_schema.json  query_plan_schema.json  query_state_schema.json  ugc_claim_schema.json  ugc_evidence_schema.json
scripts/: __init__.py  verify_public_repository.py  verify_v2_database.py
site/: app.js  index.html  styles.css
src/inspitrip/: __init__.py  paths.py
src/inspitrip/analytics/: __init__.py  store.py
src/inspitrip/api/: __init__.py  amap_client.py  app.py  chat_service.py  (+3 more)
tests/api/: test_api_contract.py
tests/database/: test_load_v2.py  test_travel_map_contract.py
tests/pipelines/: test_pipeline.py  test_travel_matrix.py
tests/quality/: test_public_repository.py
tests/recommendation/: test_amap_place_enrichment.py  test_eval_assets.py  test_output_fidelity.py  test_query_plan_p1_p2.py  test_query_runtime.py  test_ranking_extensions.py  test_retrieval_p3.py  test_ugc_claim_enhancement.py  test_v2.py
workflows/dify/: InspiTrip.template.yml
(+48 files in other folders)
