[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "inspitrip"
version = "1.0.0"
description = "An evidence-backed, feeling-driven travel recommendation portfolio project."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hai-Chao-ren" }]
dependencies = [
  "fastapi>=0.110,<1",
  "uvicorn>=0.27,<1",
  "requests>=2.31,<3",
  "python-dotenv>=1.0,<2",
  "jsonschema>=4.23,<5",
]

[project.optional-dependencies]
full = [
  "openai>=2.45,<3",
  "psycopg[binary]>=3.1,<4",
  "pyyaml>=6.0,<7",
]
dev = [
  "httpx>=0.27,<1",
  "openai>=2.45,<3",
  "psycopg[binary]>=3.1,<4",
  "pyyaml>=6.0,<7",
  "pytest>=8.0,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/inspitrip"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
